@@ -73,8 +73,7 @@ testEquals("construct(l)$TABLE(INT, INT)", "construct(reverse l)$TABLE(INT, INT)
           "failed"
 
         empty() ==
-            MAKE_-HASHTABLE(INTERN(hashfn)$Lisp,
-                            INTERN("STRONG")$Lisp)$Lisp
+            MAKE_-HASHTABLE(INTERN(hashfn)$Lisp)$Lisp
 
         search(k:Key, t:%)  ==
             r := HGET(t, k, failMsg)$Lisp
